syntax = "proto3";

package main;

import "validate/validate.proto";

option go_package = "/proto/gen;grpcapipb";

service StudentService {
  rpc GetStudents (GetStudentsRequest) returns (Students);
  rpc AddStudents (Students) returns (Students);
  rpc UpdateStudents (Students) returns (Students);
  rpc DeleteStudents (StudentIds) returns (DeleteStudentsConfirmation);
}

message DeleteStudentsConfirmation {
  string status = 1;
  repeated string deleted_ids = 2;
}

message StudentId {
  string id = 1;
}

message  StudentIds {
  repeated StudentId ids = 1;
}

message GetStudentsRequest {
  Student student = 1;
  repeated SortField sort_by = 2;
  uint32 page_number = 3;
  uint32 page_size = 4;
}

message  SortField {
  string field = 1;
  Order order = 2;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

message Student {
  string id = 1;
  string first_name = 2 [(validate.rules).string = { min_len: 1, pattern: "^[A-Za-z ]*$" }];
  string last_name = 3 [(validate.rules).string = {  min_len: 1, pattern: "^[A-Za-z ]*$" }];
  string email = 4 [(validate.rules).string = { email: true }];
  string class = 5 [(validate.rules).string = {  min_len: 1, pattern: "^[1-9][A-Z]$" }];
}

message Students {
  repeated Student students = 1;
}
